--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Game of Words</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-secondary">
@@ -21,14 +22,17 @@
       <div class="col-sm-8 offset-sm-2 col-10 offset-1 mt-4 border border-dark rounded p-sm-5 px-2 py-3 bg-light">
         <!--difficulty button-->
         <div class="row">
-          <div class="col-4 px-sm-3 pr-1"><button type="button" class="btn btn-outline-secondary btn-block" id="mode-easy">Easy</button></div>
-          <div class="col-4 px-sm-3 px-1"><button type="button" class="btn btn-outline-secondary btn-block" id="mode-medium">Medium</button></div>
-          <div class="col-4 px-sm-3 pl-1"><button type="button" class="btn btn-outline-secondary btn-block" id="mode-hard">Hard</button></div>
+          <div class="col-4 px-sm-3 pr-1"><button type="button" class="btn btn-outline-secondary btn-block" id="easy">Easy</button></div>
+          <div class="col-4 px-sm-3 px-1"><button type="button" class="btn btn-outline-secondary btn-block" id="medium">Medium</button></div>
+          <div class="col-4 px-sm-3 pl-1"><button type="button" class="btn btn-outline-secondary btn-block" id="hard">Hard</button></div>
+          <div class="col-12 text-center pt-4">Score: <strong id="score">0</strong></div>
+          <div class="col-12 text-center pt-3"><div class="card card-body"><h2 id="word">throne</h2></div></div>
+          <div class="col-12 text-center pt-5"><input type="text" id="answer"></div>
         </div>
         <!--difficulty button-end-->
-        
-        <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sed quisquam nostrum sit perspiciatis ad dignissimos, iusto et ab natus rem doloribus pariatur qui ipsa soluta rerum, ullam velit deserunt?
-        <br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, ea magni? Rerum quia consequuntur dignissimos sint. Totam corporis harum atque facilis, at asperiores nam placeat. Eligendi dicta optio deserunt est?
+        <!--game-->
+
+        <!--game-end-->
       </div>
     </div>
   </div>
