--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="col-4 px-sm-3 px-1"><button type="button" class="btn btn-outline-secondary btn-block" id="medium">Medium</button></div>
           <div class="col-4 px-sm-3 pl-1"><button type="button" class="btn btn-outline-secondary btn-block" id="hard">Hard</button></div>
           <div class="col-12 text-center pt-4">Score: <strong id="score">0</strong></div>
-          <div class="col-12 text-center pt-3"><div class="card card-body"><h2 id="word">throne</h2></div></div>
-          <div class="col-12 text-center pt-5"><input type="text" id="answer"></div>
+          <div class="col-12 text-center pt-3"><div class="card card-body"><h2 id="word"></h2></div></div>
+          <div class="col-12 text-center pt-5"><input type="text"class="text-center" id="answer"></div>
         </div>
         <!--difficulty button-end-->
         <!--game-->
