--- a/index.html
+++ b/index.html
@@ -19,20 +19,24 @@
   <!--game window-->
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-8 offset-sm-2 col-10 offset-1 mt-4 border border-dark rounded p-sm-5 px-2 py-3 bg-light">
+      <div class="col-sm-8 offset-sm-2 col-10 offset-1 mt-4 border border-secondary rounded p-sm-5 px-2 py-3 bg-light">
         <!--difficulty button-->
         <div class="row">
           <div class="col-4 px-sm-3 pr-1"><button type="button" class="btn btn-outline-secondary btn-block" id="easy">Easy</button></div>
           <div class="col-4 px-sm-3 px-1"><button type="button" class="btn btn-outline-secondary btn-block" id="medium">Medium</button></div>
           <div class="col-4 px-sm-3 pl-1"><button type="button" class="btn btn-outline-secondary btn-block" id="hard">Hard</button></div>
+          <!--difficulty button-end-->
+          <!--game-->
           <div class="col-12 text-center pt-4">Score: <strong id="score">0</strong></div>
           <div class="col-12 text-center pt-3"><div class="card card-body"><h2 id="word"></h2></div></div>
           <div class="col-12 text-center pt-5"><input type="text"class="text-center" id="answer"></div>
         </div>
-        <!--difficulty button-end-->
-        <!--game-->
-
         <!--game-end-->
+        <!--progress-bar-->
+        <div class="progress mt-5">
+          <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <!--progress-bar-end-->
       </div>
     </div>
   </div>
