github linguistic correction

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </div>
   <!--game window-end-->
 
+  <script src="global.js"></script>
   <script src="main.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </body>
